--- a/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
+++ b/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:id="@+id/relativeLayout"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="#B388FF">
     <TextView
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/questionTextView"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true" />
-  <TextView
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Welcome to the Pun Generator!"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginTop="60dp" />
+    <TextView
         android:id="@+id/answerTextView"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tap to Reveal"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_centerInParent="true" />
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Next Pun"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="60dp" />
 </RelativeLayout>
