Registered classes with IoC container

--- a/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
+++ b/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/relativeLayout"
@@ -8,17 +9,19 @@
         android:id="@+id/questionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp" 
         android:layout_centerHorizontal="true"
         android:text="Welcome to the Pun Generator!"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_marginTop="60dp" />
+        local:MvxBind="Text Question"/>
     <TextView
         android:id="@+id/answerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="Tap to Reveal"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_centerInParent="true" />
+        local:MvxBind="Text Answer"/>
     <Button
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
