--- a/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
+++ b/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
@@ -29,5 +29,6 @@
         android:layout_alignParentBottom="true"
         android:text="Next Pun"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp" />
+        android:layout_marginBottom="60dp"
+        local:MvxBind="Click NextPunCommand"/>
 </RelativeLayout>
