--- a/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
+++ b/PunGenerator/PunGenerator.Droid/Resources/layout/Main.axml
@@ -21,7 +21,7 @@
         android:layout_centerInParent="true"
         android:text="Tap to Reveal"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        local:MvxBind="Text Answer"/>
+        local:MvxBind="Text Answer; Click TapToRevealCommand"/>
     <Button
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
